--- a/StyleCSS/gameStyle.css
+++ b/StyleCSS/gameStyle.css
@@ -10,12 +10,14 @@ body {
 }
 
 .topnav a {
+  font-family: Arial, Helvetica, sans-serif;
     float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 30px;
     padding-left: 30px;
+    margin-top: 5px;
     text-decoration: none;
     font-size: 17px;
 }
@@ -23,6 +25,8 @@ body {
 .topnav img {
   width: 50px;
   padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 15px;
   float: left;
 }
