--- a/StyleCSS/gameStyle.css
+++ b/StyleCSS/gameStyle.css
@@ -3,6 +3,68 @@ body {
   background-color:#074761;
 }
 
+.commingSoonSectionDIV {
+  margin-left: 30px;
+}
+
+#descriptionTitle {
+  color: rgb(218, 218, 218);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.commingSoonSectionDIV img {
+  border: 5px solid black;
+  float: left;
+}
+
+#upCommingGameTitle {
+  float: left;
+  padding-left: 10px;
+  margin-top: 20px;
+  color: rgb(218, 218, 218);
+  font-family: 'Courier New', Courier, monospace;
+}
+
+#upCommingGameDescription {
+  float: left;
+  margin-left: -190px;
+  margin-top: 60px;
+  color: rgb(218, 218, 218);
+  font-family: 'Courier New', Courier, monospace;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .topnav {
     overflow: hidden;
     background-color: rgb(0, 28, 212); /* For browsers that do not support gradients */
@@ -32,38 +94,38 @@ body {
 }
 
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+  background-color: #ddd;
+  color: black;
+}
   
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
   
-  .topnav .icon {
-    display: none;
-  }
+.topnav .icon {
+  display: none;
+}
   
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
+}
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
   }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
   
